--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ atOptions = {
 
 </div>
 
-<!-- ▼▼▼ 縦長広告4つ（ページ最下部に横並び） ▼▼▼ -->
+<!-- ▼▼▼ 縦長広告 ▼▼▼ -->
 <section style="margin-top:80px; text-align:center;">
   <div style="display:flex; justify-content:center; gap:20px; flex-wrap:nowrap;">
 
@@ -388,23 +388,8 @@ atOptions = {
       <script type="text/javascript" src="//www.highperformanceformat.com/8dc1172332f4fc1216f0ed08d622c93b/invoke.js"></script>
     </div>
 
-    <!-- 4 -->
-    <div>
-      <script type="text/javascript">
-      atOptions = {
-        'key' : '8dc1172332f4fc1216f0ed08d622c93b',
-        'format' : 'iframe',
-        'height' : 600,
-        'width' : 160,
-        'params' : {}
-      };
-      </script>
-      <script type="text/javascript" src="//www.highperformanceformat.com/8dc1172332f4fc1216f0ed08d622c93b/invoke.js"></script>
-    </div>
-
-  </div>
 </section>
-<!-- ▲▲▲ 縦長広告4つ ここまで ▲▲▲ -->
+<!-- ▲▲▲ 縦長広告 ▲▲▲ -->
 
 </body>
 </html>
