--- a/index.html
+++ b/index.html
@@ -392,6 +392,33 @@ atOptions = {
       </script>
       <script type="text/javascript" src="//www.highperformanceformat.com/8dc1172332f4fc1216f0ed08d622c93b/invoke.js"></script>
     </div>
+      <!-- 5-->
+    <div>
+      <script type="text/javascript">
+      atOptions = {
+        'key' : '8dc1172332f4fc1216f0ed08d622c93b',
+        'format' : 'iframe',
+        'height' : 600,
+        'width' : 160,
+        'params' : {}
+      };
+      </script>
+      <script type="text/javascript" src="//www.highperformanceformat.com/8dc1172332f4fc1216f0ed08d622c93b/invoke.js"></script>
+    </div>
+  <!-- 6->
+    <div>
+      <script type="text/javascript">
+      atOptions = {
+        'key' : '8dc1172332f4fc1216f0ed08d622c93b',
+        'format' : 'iframe',
+        'height' : 600,
+        'width' : 160,
+        'params' : {}
+      };
+      </script>
+      <script type="text/javascript" src="//www.highperformanceformat.com/8dc1172332f4fc1216f0ed08d622c93b/invoke.js"></script>
+    </div>
+
 </section>
 <!-- ▲▲▲ 縦長広告 ▲▲▲ -->
 
